kubernetes/apps/haproxy-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-web
  namespace: monitoring
  annotations:
    haproxy.org/ssl-redirect: "false"
spec:
  rules:
  - host: kubernetes-dashboard.simenmo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-web
            port:
              number: 8000
